--- a/ProjetFinalApplication/app/src/main/res/layout/activity_historic.xml
+++ b/ProjetFinalApplication/app/src/main/res/layout/activity_historic.xml
@@ -14,12 +14,34 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="75dp"
+        android:layout_marginBottom="90dp"
         android:paddingBottom="5dp"
         android:background="@drawable/list_background"
         >
 
     </androidx.recyclerview.widget.RecyclerView>
+
+
+    <TextView
+        android:id="@+id/no_item_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/historic_no_item"
+        android:textColor="@color/colorGreyLight"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_marginTop="100dp"
+        android:visibility="invisible"
+        />
+
+    <ProgressBar
+        android:id="@+id/loadHistoric"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="visible"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,8 +52,8 @@
         android:paddingVertical="5dp"
         >
         <Button
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="@drawable/back"
             android:onClick="backAccountPage"
             />
