--- a/ProjetFinalApplication/app/src/main/res/layout/activity_login.xml
+++ b/ProjetFinalApplication/app/src/main/res/layout/activity_login.xml
@@ -8,15 +8,16 @@
     android:background="@drawable/new_background"
     >
 
-    <ImageButton
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/help"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:contentDescription="@string/hint_projet" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_in"
+        android:textSize="50sp"
+        android:textColor="@color/colorGrey"
+        android:layout_marginBottom="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="125dp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +27,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         >
-
         <LinearLayout
             android:layout_width="400dp"
             android:layout_height="wrap_content"
@@ -87,30 +87,31 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="30dp"
-            >
+    </LinearLayout>
 
-            <Button
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:background="@drawable/back"
-                android:layout_marginEnd="60dp"
-                tools:ignore="ButtonStyle"
-                android:onClick="backToHome"
-                />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="125dp"
+        android:layout_alignParentBottom="true"
+        >
 
-            <Button
-                android:id="@+id/validate_connect"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:background="@drawable/button_validate"
-                tools:ignore="ButtonStyle" />
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/back"
+            android:layout_marginEnd="60dp"
+            tools:ignore="ButtonStyle"
+            android:onClick="backToHome"
+            />
 
-        </LinearLayout>
+        <Button
+            android:id="@+id/validate_connect"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@drawable/button_validate"
+            tools:ignore="ButtonStyle" />
 
     </LinearLayout>
 
