--- a/ProjetFinalApplication/app/src/main/res/layout/activity_main.xml
+++ b/ProjetFinalApplication/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,17 @@
         android:layout_marginEnd="20dp"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/welcome"
+        android:textSize="50sp"
+        android:textColor="@color/colorGrey"
+        android:layout_marginBottom="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="125dp"
+        />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +37,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         >
-
         <Button
             android:layout_width="250dp"
             android:layout_height="wrap_content"
@@ -45,7 +55,7 @@
             android:textSize="@dimen/sign_text_size"
             android:textColor="@color/colorGrey"
             android:textAllCaps="false"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/button_sign_design"
             android:onClick="launchSignUpActivity"
             />
