--- a/ProjetFinalApplication/app/src/main/res/layout/activity_signup.xml
+++ b/ProjetFinalApplication/app/src/main/res/layout/activity_signup.xml
@@ -1,31 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<!--
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignupActivity"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/new_background"
     >
+    -->
 
-    <ImageButton
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/help"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:contentDescription="@string/hint_projet" />
-
-    <LinearLayout
+<LinearLayout
+        android:id="@+id/signup_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        >
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="@drawable/new_background"
+    >
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,93 +26,172 @@
             android:text="@string/sign_up"
             android:textSize="50sp"
             android:textColor="@color/colorGrey"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="10dp"
             />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginBottom="20dp"
-        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="10dp"
+            >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginVertical="10dp"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="60dp"
+                    android:text="@string/login"
+                    android:textColor="@color/colorGrey"
+                    android:textSize="@dimen/sign_text_size"
+                    tools:ignore="RtlSymmetry"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="20dp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/password"
+                    android:textColor="@color/colorGrey"
+                    android:textSize="@dimen/sign_text_size"
+                    android:layout_marginBottom="20dp"
+                    />
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginVertical="10dp"
+                android:layout_marginStart="10dp"
+                >
+
+                <EditText
+                    android:id="@+id/new_pseudo"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/sign_text_size"
+                    android:background="@drawable/button_log_design"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    tools:ignore="LabelFor"
+                    android:layout_marginBottom="5dp"
+                    />
+
+                <EditText
+                    android:id="@+id/new_password"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/sign_text_size"
+                    android:background="@drawable/button_log_design"
+                    android:importantForAutofill="no"
+                    tools:ignore="LabelFor"
+                    android:layout_marginBottom="5dp"
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/location_home"
+            android:textColor="@color/colorGrey"
+            android:textSize="@dimen/sign_text_size"
+            android:layout_marginBottom="20dp"
+            />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginVertical="10dp"
+            android:gravity="center"
             >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingEnd="60dp"
-                android:text="@string/login"
+                android:text="N°"
                 android:textColor="@color/colorGrey"
                 android:textSize="@dimen/sign_text_size"
-                tools:ignore="RtlSymmetry"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginTop="5dp"
+                />
+
+            <EditText
+                android:id="@+id/new_location_number"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/sign_text_size"
+                android:background="@drawable/button_log_design"
+                android:importantForAutofill="no"
+                tools:ignore="LabelFor"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
                 />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/password"
+                android:text="Rue"
                 android:textColor="@color/colorGrey"
                 android:textSize="@dimen/sign_text_size"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginTop="5dp"
                 />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/new_location_road"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:text="@string/location_home"
-                android:textColor="@color/colorGrey"
+                android:inputType="text"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/sign_text_size"
-                android:layout_marginBottom="20dp"
+                android:background="@drawable/button_log_design"
+                android:importantForAutofill="no"
+                tools:ignore="LabelFor"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
                 />
-
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginVertical="10dp"
-            android:layout_marginStart="10dp"
+            android:gravity="start"
             >
 
-            <EditText
-                android:id="@+id/new_pseudo"
-                android:layout_width="170dp"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
+                android:text="Ville/Commune"
+                android:textColor="@color/colorGrey"
                 android:textSize="@dimen/sign_text_size"
-                android:background="@drawable/button_log_design"
-                android:importantForAutofill="no"
-                android:inputType="text"
-                tools:ignore="LabelFor"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="10dp"
                 />
 
             <EditText
-                android:id="@+id/new_password"
-                android:layout_width="170dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/sign_text_size"
-                android:background="@drawable/button_log_design"
-                android:importantForAutofill="no"
-                tools:ignore="LabelFor"
-                android:layout_marginBottom="5dp"
-                />
-
-            <EditText
-                android:id="@+id/new_location"
-                android:layout_width="170dp"
+                android:id="@+id/new_location_city"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:textColor="@color/colorPrimaryDark"
@@ -128,17 +200,47 @@
                 android:importantForAutofill="no"
                 tools:ignore="LabelFor"
                 android:layout_marginBottom="5dp"
+                />
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            tools:ignore="ExtraText"
+            >
+            x
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/country"
+                android:textColor="@color/colorGrey"
+                android:textSize="@dimen/sign_text_size"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="18dp"
+                />
+
+            <EditText
+                android:id="@+id/new_location_country"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/sign_text_size"
+                android:background="@drawable/button_log_design"
+                android:importantForAutofill="no"
+                tools:ignore="LabelFor"
                 />
 
         </LinearLayout>
-
-    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginTop="30dp"
+            android:layout_below="@id/signup_layout"
             >
 
             <Button
@@ -154,19 +256,13 @@
                 android:id="@+id/validate_signup"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:background="@drawable/validate"
+                android:background="@drawable/button_validate"
                 tools:ignore="ButtonStyle" />
 
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progessbar_signup"
-            android:layout_marginTop="20dp"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:visibility="invisible"
-            />
-
     </LinearLayout>
+<!--
+</ScrollView>
+-->
 
-</RelativeLayout>
