--- a/ProjetFinalApplication/app/src/main/res/layout/activity_account.xml
+++ b/ProjetFinalApplication/app/src/main/res/layout/activity_account.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,10 +11,11 @@
     >
 
     <TextView
+        android:id="@+id/text_datacheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="@string/analysis"
+        android:layout_marginTop="150dp"
+        android:text="@string/add_check"
         android:textSize="40sp"
         android:textAlignment="center"
         android:textColor="@color/colorGrey"
@@ -24,17 +25,37 @@
         android:id="@+id/timer_next_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/text_datacheck"
         android:layout_marginTop="30dp"
         android:text="@string/example_time"
+        android:layout_centerHorizontal="true"
         android:textSize="50sp"
         android:textColor="@color/colorWhite"
-        android:layout_marginBottom="100dp"
+        android:visibility="invisible"
         />
+
+    <Button
+        android:id="@+id/add_check_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:textAllCaps="false"
+        android:textColor="@color/colorGrey"
+        android:textSize="20sp"
+        android:layout_below="@id/text_datacheck"
+        android:background="@drawable/play_button"
+        android:layout_marginTop="30dp"
+        android:onClick="startRunnable"
+        android:layout_centerHorizontal="true"
+        />
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
         >
 
         <Button
@@ -57,18 +78,5 @@
             tools:ignore="ButtonStyle" />
 
     </LinearLayout>
-
-    <Button
-        android:id="@+id/add_check_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_check"
-        android:textAllCaps="false"
-        android:textColor="@color/colorGrey"
-        android:textSize="20sp"
-        android:background="@drawable/button_sign_design"
-        android:layout_marginTop="30dp"
-        android:onClick="startRunnable"
-        />
     
-</LinearLayout>
+</RelativeLayout>
