--- a/ProjetFinalApplication/app/src/main/res/layout/activity_account.xml
+++ b/ProjetFinalApplication/app/src/main/res/layout/activity_account.xml
@@ -10,6 +10,14 @@
     android:background="@drawable/new_background"
     >
 
+    <ImageView
+        android:id="@+id/img_settings"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/settings"
+        android:layout_marginStart="340dp"
+        android:layout_marginTop="20dp"/>
+
     <TextView
         android:id="@+id/text_datacheck"
         android:layout_width="wrap_content"
