--- a/ProjetFinalApplication/app/src/main/res/values/colors.xml
+++ b/ProjetFinalApplication/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorBackgound">#301030</color>
     <color name="colorNull">#00E9E7E7</color>
     <color name="colorGreyLight">#E9E7E7</color>
+    <color name="colorPurple">#830FD4</color>
 </resources>
