--- a/ProjetFinalApplication/app/src/main/res/layout/activity_account.xml
+++ b/ProjetFinalApplication/app/src/main/res/layout/activity_account.xml
@@ -10,6 +10,17 @@
     android:background="@drawable/new_background"
     >
 
+    <ImageButton
+        android:id="@+id/img_settings"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/settings"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:contentDescription="@string/settings" />
+
     <TextView
         android:id="@+id/text_datacheck"
         android:layout_width="wrap_content"
